# Token-Sale

./: Cargo.toml  README.md  deny.toml
Client/: Cargo.toml
Client/src/: main.rs
Common/: Cargo.toml
Common/src/: commands.rs  metadata.rs
Program/: Cargo.toml
Program/src/: lib.rs
