[workspace]
members = ["Program", "Client", "Common"]

resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["448-OG <superuser@448.africa>"]
homepage = "https://github.com/448-OG/TalentOlympics.git"
repository = "https://github.com/448-OG/TalentOlympics.git"
readme = "README.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "2.0.1"
borsh = { version = "1.5.1", features = ["derive", "bytes"] }
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
spl-transfer-hook-interface = { version = "0.7.0" }
