[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program.workspace = true
borsh.workspace = true
spl-token-2022.workspace = true
common = { path = "../Common" }
spl-transfer-hook-interface.workspace = true
solana-client = "2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account.workspace = true
solana-transaction-status = "2.0.2"
