[package]
name = "program"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
version.workspace = true


[dependencies]
solana-program.workspace = true
borsh.workspace = true
bytes.workspace = true
spl-token-2022.workspace = true
common = { path = "../Common" }
